# AskMalt

./: .gitignore  AskMalt.wsp  CMakeLists.txt  LICENSE  README.md
docs/: Grammar.bnf
include/: Core.h  Exception.h  Function.h  FunctionContext.h  InterpreterContext.h  Mark.h  Objects.h  Predefined.h  Value.h  Value.hpp
include/Parser/: AST.h  Lexer.h  Parser.h  Token.h
src/: main.cpp
src/Core/: InterpreterContext.cpp  eval.cpp  rep_print.cpp
src/Object/: Exception.cpp  Function.cpp  Mark.cpp  Objects.cpp
src/Parser/: AST.cpp  Lexer.cpp  Parser.cpp  Token.cpp
test/: main1.cpp  token&lexer_test.cpp
